--- a/package.json
+++ b/package.json
@@ -37,9 +37,12 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "helmet": "^5.0.1",
+    "jest": "^27.4.7",
     "nodemon": "^2.0.15",
     "pm2": "^5.1.2",
     "prettier": "^2.5.1",
+    "supertest": "^6.2.1",
+    "ts-jest": "^27.1.2",
     "ts-node": "^10.4.0",
     "tsc-alias": "^1.5.0",
     "tslib": "^2.3.1",
@@ -57,7 +60,7 @@
     "envalid": "^7.2.2",
     "express": "^4.17.2",
     "hpp": "^0.2.3",
-    "mongoose": "^5.10.1",
+    "mongoose": "^5.13.14",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "reflect-metadata": "^0.1.13",
